--- a/pages/main.html
+++ b/pages/main.html
@@ -44,7 +44,7 @@
         </div>
         <div class="card-body">
           <p>
-            <a href="all-courses.html" class="btn btn-primary">前往 Courses</a>
+            <a href="/pages/all-courses.html" class="btn btn-primary">前往 Courses</a>
           </p>
           <p>
             顯示所有的課程，並且可以使用篩選器來過濾出相關課程。
@@ -80,7 +80,7 @@
         </div>
         <div class="card-body">
           <p>
-            <a href="all-titles.html" class="btn btn-primary">前往 Titles</a>
+            <a href="/pages/all-titles.html" class="btn btn-primary">前往 Titles</a>
           </p>
           <p>
             顯示所有的課程標題，每個標題都可以修改或刪除。
@@ -109,7 +109,7 @@
         </div>
         <div class="card-body">
           <p>
-            <a href="all-presenters.html" class="btn btn-primary">前往 Presenters</a>
+            <a href="/pages/all-presenters.html" class="btn btn-primary">前往 Presenters</a>
           </p>
           <p>
             顯示所有的講師，每個講師都可以修改或刪除。
