--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Course Information</title>
+  <title>Add Course</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -60,13 +60,8 @@
       .catch(error => console.error('Error loading menu:', error));
   
     // Fetch and populate presenters
-    fetch('../database/presenters.json')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Network response was not ok ' + response.statusText);
-        }
-        return response.json();
-      })
+    fetch('/presenters')
+      .then(response => response.json())
       .then(presenters => {
         const presenterList = document.getElementById('presenterList');
         presenterList.innerHTML = ''; // Clear existing content
@@ -77,14 +72,14 @@
           const checkbox = document.createElement('input');
           checkbox.type = 'checkbox';
           checkbox.className = 'form-check-input';
-          checkbox.id = `presenter-${presenter}`;
-          checkbox.value = presenter;
+          checkbox.id = `presenter-${presenter._id}`;
+          checkbox.value = presenter._id;
           checkbox.name = 'presenter';
   
           const label = document.createElement('label');
           label.className = 'form-check-label';
-          label.htmlFor = `presenter-${presenter}`;
-          label.textContent = presenter;
+          label.htmlFor = `presenter-${presenter._id}`;
+          label.textContent = presenter.name;
   
           checkboxWrapper.appendChild(checkbox);
           checkboxWrapper.appendChild(label);
@@ -103,43 +98,31 @@
       const duration = document.getElementById('duration').value;
       const presenter = Array.from(document.querySelectorAll('#presenterList input:checked')).map(input => input.value);
   
-      // Fetch current courses and add new course
-      fetch('../database/courses.json')
-        .then(response => response.json())
-        .then(data => {
-          const newCourse = { title, topic, content, duration, presenter };
-          data.push(newCourse); // Add new course
-          return fetch('/update-courses', { // Endpoint to update courses.json
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(data),
-          });
-        })
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Network response was not ok');
-          }
-
-          // Show JSON data after successful submission
-          document.getElementById('jsonDisplay').style.display = 'block';
-          document.getElementById('jsonData').textContent = JSON.stringify({
-            title,
-            topic,
-            content,
-            duration,
-            presenter
-          }, null, 2); // Pretty print JSON
-          
-          // Alert and redirect
-          alert('Course added successfully!');
-          window.location.href = '/pages/all-courses.html';
-        })
-        .catch(error => {
-          console.error('Error:', error);
-          alert('Failed to add course. Please try again.');
-        });
+      const newCourse = { title, topic, content, duration, presenter };
+  
+      fetch('/add-course', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(newCourse),
+      })
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        // Show JSON data after successful submission
+        document.getElementById('jsonDisplay').style.display = 'block';
+        document.getElementById('jsonData').textContent = JSON.stringify(newCourse, null, 2); // Pretty print JSON
+        
+        // Alert and redirect
+        alert('Course added successfully!');
+        window.location.href = 'all-courses.html';
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        alert('Failed to add course. Please try again.');
+      });
     });
   
     // Clear button
@@ -155,23 +138,17 @@
   
     // Fetch and populate titles
     fetch('/titles')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Network response was not ok ' + response.statusText);
-        }
-        return response.json();
-      })
+      .then(response => response.json())
       .then(titles => {
         const titleSelect = document.getElementById('title');
         titles.forEach(title => {
           const option = document.createElement('option');
           option.value = title.title;
-          option.text = title.title;   
+          option.text = title.title;
           titleSelect.add(option);
         });
       })
       .catch(error => console.error('Error fetching titles:', error));
   </script>
-  
 </body>
 </html>
